// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Radio component should checked when clicked 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-hKFyIo gxgalI"
      >
        <label
          class="sc-bdnylx dznijb"
        >
          <input
            aria-invalid="false"
            class="sc-eCApGN gClIwr"
            role="radio"
            type="radio"
          />
          <span>
            <span
              class="sc-gtssRu lbqNjK"
            >
              test
            </span>
          </span>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-hKFyIo gxgalI"
    >
      <label
        class="sc-bdnylx dznijb"
      >
        <input
          aria-invalid="false"
          class="sc-eCApGN gClIwr"
          role="radio"
          type="radio"
        />
        <span>
          <span
            class="sc-gtssRu lbqNjK"
          >
            test
          </span>
        </span>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test Radio component should disabled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-hKFyIo gxgalI"
      >
        <label
          class="sc-bdnylx kjTSsm"
          disabled=""
        >
          <input
            aria-invalid="false"
            class="sc-eCApGN gClIwr"
            disabled=""
            role="radio"
            type="radio"
          />
          <span>
            <span
              class="sc-gtssRu lbqNjK"
            >
              test
            </span>
          </span>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-hKFyIo gxgalI"
    >
      <label
        class="sc-bdnylx kjTSsm"
        disabled=""
      >
        <input
          aria-invalid="false"
          class="sc-eCApGN gClIwr"
          disabled=""
          role="radio"
          type="radio"
        />
        <span>
          <span
            class="sc-gtssRu lbqNjK"
          >
            test
          </span>
        </span>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test Radio component should hide label 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-hKFyIo gxgalI"
      >
        <label
          class="sc-bdnylx dznijb"
        >
          <input
            aria-invalid="false"
            class="sc-eCApGN gClIwr"
            role="radio"
            type="radio"
          />
          <span>
            <span
              class="sc-gtssRu kYIbNy"
            >
              test
            </span>
          </span>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-hKFyIo gxgalI"
    >
      <label
        class="sc-bdnylx dznijb"
      >
        <input
          aria-invalid="false"
          class="sc-eCApGN gClIwr"
          role="radio"
          type="radio"
        />
        <span>
          <span
            class="sc-gtssRu kYIbNy"
          >
            test
          </span>
        </span>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test Radio component should render extra text 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-hKFyIo gxgalI"
      >
        <label
          class="sc-bdnylx dznijb"
        >
          <input
            aria-invalid="true"
            class="sc-eCApGN gClIwr"
            role="radio"
            type="radio"
          />
          <span>
            <span
              class="sc-gtssRu lbqNjK"
            >
              test
            </span>
          </span>
        </label>
        <span
          class="sc-jSFkmK jgqpij"
        >
          errortext
        </span>
        <div
          class="sc-dlnjPT jqzpfZ"
        >
          description
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-hKFyIo gxgalI"
    >
      <label
        class="sc-bdnylx dznijb"
      >
        <input
          aria-invalid="true"
          class="sc-eCApGN gClIwr"
          role="radio"
          type="radio"
        />
        <span>
          <span
            class="sc-gtssRu lbqNjK"
          >
            test
          </span>
        </span>
      </label>
      <span
        class="sc-jSFkmK jgqpij"
      >
        errortext
      </span>
      <div
        class="sc-dlnjPT jqzpfZ"
      >
        description
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
